[tool.poetry]
name = "DataLoader"
version = "0.1.0"
description = "Data loader for usage in couple projects"
authors = ["Ulvi Movsum-zada"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "2.1.2"
pandas = "2.2.3"
torchvision = "0.17.2"
scikit_learn = "1.5.2"
torch = "2.2.2"
openml = "0.15.0"
ucimlrepo = "0.0.7"
datasets = "3.0.1"
